# phantom-engine

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Phantom_Engine_Master_Blueprint_v2.md  README.md  audit.toml  commit_msg.txt  deny.toml  docker-compose.yml  prometheus.yml  release_notes.md  run_js_test.rs  test_persistent.rs  test_rt.rs  test_session_send.long-type-10699036127828919756.txt  test_session_send.long-type-12150553553766246235.txt  test_session_send.long-type-2127255507991624189.txt  test_session_send.rs  test_sp.long-type-8958796143394103533.txt  test_sp.rs  test_sp_async.rs  test_sp_async_rt.rs  test_spawn.rs
.github/: BRANCH_PROTECTION.md
.github/workflows/: bench.yml  ci.yml  docker.yml  release-images.yml  security.yml
docs/: crates.js  help.html  index.html  settings.html  sidebar-items.js  src-files.js
docs/benchmarks/: data.js
docs/client/: struct.ClientBuilder.html  struct.Response.html
docs/profile/: type.TlsVersion.html
docs/profile/chrome_134/: constant.JA3_HASH.html  fn.chrome_134_macos_arm.html  index.html
docs/quik/: all.html
docs/quik/client/: fn.connect.html  index.html
docs/quik/client/proxy/: enum.Proxy.html
docs/quik/client/response/: struct.Response.html
docs/quik/error/: index.html
docs/quik/profile/: index.html  struct.HeadersPriority.html
docs/quik/profile/chrome_134/: fn.profile.html
docs/search.index/: 0825b2c3e6.js  1c27cecaca.js  23cd2bf3cc.js  396e8dfde9.js  459d4dee49.js  507ab00c97.js  6b3edb8e96.js  72e153dc06.js  7550b1ce15.js  77def06956.js  root.js
docs/search.index/crateNames/: 99248a742b.js
docs/search.index/desc/: 1d5fbf8c7f.js
docs/search.index/entry/: 28dcf2d6c6.js
docs/search.index/function/: 89ba6dd343.js
docs/search.index/generic_inverted_index/: 6ce7f8a5ef.js
docs/search.index/name/: b4f44ef985.js
docs/search.index/normalizedName/: 9b59dbd0e5.js
docs/search.index/path/: 909f38bf2e.js
docs/search.index/type/: da6a5ac729.js
docs/src/quik/: error.rs.html  lib.rs.html
docs/src/quik/client/: connector.rs.html  mod.rs.html  pool.rs.html  proxy.rs.html  request.rs.html  response.rs.html
docs/src/quik/http2/: mod.rs.html  (+1 more)
grafana/dashboards/: phantom-engine.json
grafana/provisioning/dashboards/: dashboards.yml
k6/: click_load.js  mixed_load.js  navigate_load.js  scene_graph_load.js  thresholds.js
phantom-anti-detect/: Cargo.toml
phantom-anti-detect/src/: lib.rs
phantom-anti-detect/tests/: persona_d60_test.rs
phantom-cli/: Cargo.toml  README.md
phantom-cli/src/: client.rs  errors.rs  main.rs
phantom-cli/src/commands/: history.rs  inspect.rs  live.rs  mod.rs  persona.rs  server.rs  setup.rs
phantom-core/: Cargo.toml
phantom-core/src/: errors.rs  lib.rs  parser.rs  pipeline.rs
phantom-core/src/css/: cascade.rs  mod.rs  properties.rs
phantom-core/src/dom/: mod.rs  node.rs  query.rs  sink.rs
phantom-core/src/layout/: bounds.rs  mod.rs
phantom-core/tests/: errors_test.rs  parser_test.rs  pipeline_test.rs  query_test.rs
phantom-fuzzer/: Cargo.toml
phantom-fuzzer/src/: config.rs  corpus.rs  error.rs  grammar.rs  lib.rs  main.rs  model.rs  mutate.rs  plan.rs  render.rs
phantom-js/: Cargo.toml  build.rs
phantom-js/benches/: eval_bench.rs
phantom-js/js/: browser_shims.js  event_target.js  location.js  mutation_observer.js
phantom-js/src/: behavior.rs  circuit_breaker.rs  error.rs  lib.rs  shims.rs
phantom-js/src/tier1/: mod.rs  pool.rs  session.rs
phantom-js/src/tier1/apis/: fetch.rs  mod.rs  mutation_observer.rs  timers.rs
phantom-js/src/tier1/bindings/: document.rs  element.rs  mod.rs  navigator.rs  setup.rs
phantom-js/src/tier2/: mod.rs  pool.rs  session.rs
phantom-js/tests/: behavior_test.rs  circuit_breaker_test.rs  debug.rs  font_shim_test.rs  phase2_integration.rs  shim_harness_test.rs  tier1_apis_test.rs  tier1_bindings_test.rs  tier2_session_test.rs  v8_init_test.rs
phantom-mcp/: Cargo.toml
phantom-mcp/src/: engine.rs  lib.rs  metrics.rs  stdio.rs  telemetry.rs
phantom-mcp/src/tools/: click.rs  clone_session.rs  cookies.rs  evaluate.rs  js_escape.rs  mod.rs  navigate.rs  press_key.rs  scene_graph.rs  snapshot.rs  subscribe.rs  tabs.rs  type_text.rs
phantom-mcp/storage/00000000-0000-0000-0000-000000000000/: snapshot-1775626353.tar.zst  snapshot-1775626475.tar.zst  snapshot-1775626570.tar.zst
phantom-mcp/tests/: auth_test.rs  budget_test.rs  cow_clone_test.rs  engine_test.rs  health_test.rs  metrics_test.rs  phase3_integration.rs  phase4_integration.rs  resume_test.rs  scale_test.rs  security_audit_test.rs  suspend_test.rs  telemetry_test.rs
phantom-net/: Cargo.toml
phantom-net/src/: lib.rs  navigate.rs
phantom-net/tests/: navigate_test.rs
phantom-serializer/: Cargo.toml
phantom-serializer/benches/: cct_bench.rs
phantom-serializer/src/: buffer_pool.rs  cct_types.rs  delta.rs  geometry.rs  id_stabilizer.rs  lib.rs  selective.rs  semantic.rs  serializer.rs  string_intern.rs  visibility.rs  zindex.rs
phantom-serializer/tests/: delta_test.rs  phase1_integration.rs  serializer_test.rs  visibility_test.rs
phantom-session/: Cargo.toml
phantom-session/benches/: session_bench.rs
phantom-session/src/: lib.rs
phantom-storage/: Cargo.toml
phantom-storage/src/: lib.rs  snapshot.rs
phantom-storage/tests/: cache_api_test.rs  cookies_test.rs  indexeddb_test.rs  localstorage_test.rs  snapshot_test.rs
prometheus/rules/: phantom.yml
quik/: Cargo.toml  README.md
quik/docs/client/: enum.Proxy.html  sidebar-items.js  struct.Client.html  struct.QuikConnection.html
quik/docs/error/: enum.Error.html  type.Result.html
quik/docs/profile/: enum.Platform.html  enum.PseudoOrder.html  sidebar-items.js  struct.ChromeProfile.html  struct.HeaderProfile.html  struct.Http2Profile.html  struct.SettingsFrame.html  struct.TlsProfile.html
quik/src/: error.rs  lib.rs
quik/src/client/: connector.rs  pool.rs  proxy.rs  request.rs  response.rs
quik/src/http2/: handshake.rs
quik/src/profile/: chrome_134.rs  mod.rs
quik/src/tls/: connector.rs
scripts/: fuzz-orchestrator.py
(+32 files in other folders)
