[workspace]
resolver = "2"
members = [
    "phantom-net",
    "phantom-core",
    "phantom-js",
    "phantom-serializer",
    "phantom-session",
    "phantom-storage",
    "phantom-mcp",
    "phantom-anti-detect",
    "phantom-cli",
    "phantom-fuzzer"
]

[workspace.dependencies]
criterion = "0.5"
