[package]
name = "phantom-cli"
version = "0.1.1-alpha"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "ph"
path = "src/main.rs"

[dependencies]
bytes = "1"
clap = { version = "=4.6.1", features = ["derive"] }
colored = "=3.1.1"
dirs = "=6.0.0"
dotenvy = "=0.15.7"
libc = "0.2"
which = "6.0"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "=0.1.44"
uuid = { version = "1", features = ["v4"] }
