[package]
name = "phantom-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
html5ever = "0.38.0"
markup5ever = "0.38.0"
cssparser = "=0.37.0"
cssparser-selectors = { package = "cssparser", version = "=0.31.2" }
taffy = "=0.9.2"
indextree = "=4.8.0"
selectors = "0.25"
thiserror = "1"
tracing = "=0.1.44"
phantom-session = { path = "../phantom-session" }
phantom-storage = { path = "../phantom-storage" }
