[package]
name = "phantom-fuzzer"
version = "0.1.1-alpha"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "phantom-fuzz"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
phantom-core = { path = "../phantom-core" }
rand = "=0.9.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
thiserror = "=1.0.69"
uuid = { version = "=1.23.1", features = ["v4", "serde"] }
