[package]
name = "phantom-js"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs = { version = "=0.11.0", features = ["futures", "loader", "macro", "classes", "disable-assertions"] }
deno_core = "=0.311.0"

tokio = { version = "1", features = ["full"] }
selectors = "0.25"
thiserror = "1"
tracing = "=0.1.44"
indextree = "=4.8.0"
phantom-core = { path = "../phantom-core" }
rand = "=0.8"
rand_distr = "=0.4"
once_cell = "1"
parking_lot = "0.12.5"
crossbeam = "0.8"
serde_json = "1"

# BANNED CRATES — never add these under any circumstances:
# reqwest       → uses rustls, produces detectable TLS
# rquest        → missing JA4H controls, replaced by wreq
# rusty_v8      → old unmaintained crate name, use v8
# openssl-sys   → symbol conflicts with boring-sys
# native-tls    → system TLS, detectable fingerprint

[dev-dependencies]
phantom-serializer = { path = "../phantom-serializer" }
deno_core = "=0.311.0"

[build-dependencies]
deno_core = "=0.311.0"
