[package]
name = "phantom-js"
version = "0.1.1-alpha"
edition = "2024"
license = "Apache-2.0"

[dependencies]
rquickjs = { version = "=0.11.0", default-features = false, features = ["std", "futures", "loader", "macro", "classes", "disable-assertions"] }
deno_core = "=0.397.0"
v8 = "=147.1.0"

tokio = { version = "1", features = ["full"] }
selectors = "0.25"
thiserror = "1"
tracing = "=0.1.44"
indextree = "=4.8.0"
phantom-core = { path = "../phantom-core" }
rand = "0.9.3"
rand_distr = "0.5.0"
once_cell = "1"
parking_lot = "0.12.5"
crossbeam = "0.8"
serde_json = "1"

[dev-dependencies]
phantom-serializer = { path = "../phantom-serializer" }
deno_core = "=0.397.0"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
deno_core = "=0.397.0"

[[bench]]
name = "eval_bench"
harness = false
