[package]
name = "phantom-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "=0.1.44"
parking_lot = "0.12.5"
phantom-anti-detect = { path = "../phantom-anti-detect" }
phantom-net = { path = "../phantom-net" }
phantom-session = { path = "../phantom-session" }
phantom-js = { path = "../phantom-js" }
once_cell = "1"

# BANNED CRATES :
# reqwest       → uses rustls, produces detectable TLS
# rquest        → missing JA4H controls, replaced by wreq
# rusty_v8      → old unmaintained crate name, use v8
# openssl-sys   → symbol conflicts with boring-sys
# native-tls    → system TLS, detectable fingerprint
