[package]
name = "phantom-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "=0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "=0.1.44"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
prometheus = "0.14.0"
parking_lot = "0.12.5"
phantom-anti-detect = { path = "../phantom-anti-detect" }
phantom-net = { path = "../phantom-net" }
phantom-session = { path = "../phantom-session" }
phantom-js = { path = "../phantom-js" }
phantom-core = { path = "../phantom-core" }
phantom-serializer = { path = "../phantom-serializer" }
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
phantom-storage = { path = "../phantom-storage" }
cookie_store = "=0.22.1"
zstd = "=0.13.3"
url = "2.5.8"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
sled = "=0.34.7"
tar = "0.4"
sha2 = "=0.11.0"
hex = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
tracing-test = "0.2.5"
