[package]
name    = "phantom-net"
version     = "0.2.2-alpha"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# Use the official standalone http-quik crate for high-fidelity Chrome transport.
# This ensures total identity parity and decouples the engine from the transport source.
http-quik = "0.1.0"
rand      = "0.9.3"
rand_distr = "0.5.0"
v8 = "=147.1.0"
rusqlite  = { version = "=0.31", features = ["bundled"] }
tokio     = { version = "1", features = ["full"] }
http      = "1.0"
tracing   = "0.1"
thiserror = "1"
url = "2"
phantom-anti-detect = { path = "../phantom-anti-detect" }
phantom-core = { path = "../phantom-core" }
phantom-serializer = { path = "../phantom-serializer" }
encoding_rs = "0.8.35"

[dev-dependencies]
indextree = "=4.8.0"

