[package]
name = "phantom-session"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4"] }
crossbeam = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "=0.1.44"

# BANNED CRATES — never add these under any circumstances:
# reqwest       → uses rustls, produces detectable TLS
# rquest        → missing JA4H controls, replaced by wreq
# rusty_v8      → old unmaintained crate name, use v8
# openssl-sys   → symbol conflicts with boring-sys
# native-tls    → system TLS, detectable fingerprint
