[package]
name = "phantom-storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rusqlite = { version = "=0.31", features = ["bundled", "backup"] }
sled = "=0.34.7"
cookie_store = "=0.22.1"
zstd = "=0.13.3"
sha2 = "=0.11.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.5.8"
thiserror = "1"
tracing = "=0.1.44"
tar = "0.4"
hmac = "0.12"
hmac-sha256 = "1"

[dev-dependencies]
tempfile = "3"